[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Nexus/DeckBuilder.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Nexus/DeckBuilder/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Nexus/DeckBuilder/Collection.tscn" type="PackedScene" id=3]

[node name="DeckBuilder" type="Node2D"]
script = ExtResource( 1 )

[node name="Cards" type="Node2D" parent="."]

[node name="Deck" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -640 )

[node name="Collection" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 245 )

[node name="CardsInDeck" type="Node2D" parent="."]

[connection signal="slide_collection" from="Collection" to="." method="_on_Collection_slide_collection"]
